# nyc-taxi-mlops

./: .gitignore  README.md  pyproject.toml  requirements-serving.txt  requirements.txt
.dvc/: config
data/: raw.dvc
notebooks/: 00_data_smoke_test.py  01_schema_diffs.py
src/config/: settings.py
src/ingestion/: __main__.py  downloader.py
src/validation/: contracts.py  validator.py
tests/: test_ingestion.py  test_validation.py
