[project]
name = "nyc-taxi-mlops"
version = "0.1.0"
description = "Production-style MLOps pipeline for NYC taxi trip duration prediction"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.32",
    "pyarrow>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]